[package]
name = "map18xx"
description = "18xx tile and map designer"
version = "0.0.1"
authors = ["Xeryus Stokkel <brontitall@dds.nl>"]
license = "MIT"
repository = "https://github.com/XeryusTC/map18xx"
exclude = [
	"games/debug/*",
]

[dependencies]
svg = "0.5.7"
nalgebra = "0.13.1"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0"
argparse = "0.2.1"
